--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I am a UX/UI Designer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Irvine,CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Skateboarding, Music</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>DJ</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orange County</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to learn how to make the interfaces I design actually function</p>
     </section>
 
     <footer id="footer">
